mv to substrate folder

--- a/squid-ink/archive/.env
+++ b/squid-ink/archive/.env
@@ -1,5 +1,5 @@
 # replace with your endpoint
-WS_PROVIDER_ENDPOINT_URI=wss://kusama-rpc.polkadot.io/
+WS_PROVIDER_ENDPOINT_URI=ws://172.17.0.1:9944
 
 # # If your chain uses custom types you need to provide those
 # # as detailed here - https://polkadot.js.org/docs/api/start/types.extend
