--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "graphql": "^16.5.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
+    "urql": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
