--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "urql": "^2.2.2",
