--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "twin.macro": "^2.8.2",
     "typescript": "^4.7.3",
     "urql": "^2.2.2",
     "web-vitals": "^2.1.4"
@@ -51,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
+    "@types/tailwindcss": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "autoprefixer": "^10.4.7",
