--- a/explorer-ui/public/manifest.json
+++ b/explorer-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Substrate Explorer",
+  "name": "Epirus Substrate Explorer",
   "icons": [
     {
       "src": "favicon.ico",
