--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "^0.0.8",
     "@subsquid/substrate-typegen": "^0.4.3",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^16.11.27",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
@@ -40,8 +41,5 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-type-graphql": "^0.3.2",
     "typescript": "~4.6.2"
-  },
-  "_moduleAliases": {
-    "@chain": "lib/chains/local"
   }
 }
