--- a/squid-ink/.env
+++ b/squid-ink/.env
@@ -1,9 +1,14 @@
-DB_NAME=squid
-DB_PASS=squid
+CHAIN=local
+PROCESSOR_NAME=squid-local
+DB_NAME=squid-local
+DB_PASS=squid-local
 DB_PORT=23798
-#DB_NAME=defaultdb
 #DB_USER=root
-#DB_PASS=
-#DB_PORT=26257
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
+ARCHIVE_ENDPOINT=http://localhost:4010/v1/graphql
+WS_ENDPOINT=ws://127.0.0.1:9944
+## Defines in which storage are the balances stored. Can be found in the runtime config of the chain.
+BALANCES_STORE=system
+## If your chain uses custom types you need to provide those
+# BUNDLE_TYPES=typesBundle.json
