--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -1,7 +1,7 @@
 CHAIN=local
 PROCESSOR_NAME=squid-local
-DB_NAME=squid-local
-DB_PASS=squid-local
+DB_NAME=squid
+DB_PASS=squid
 DB_PORT=23798
 #DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3000
