useSquid refactor on explorer-ui

--- a/squid-ink/archive/.env
+++ b/squid-ink/archive/.env
@@ -1,5 +1,5 @@
 # replace with your endpoint
-WS_PROVIDER_ENDPOINT_URI=wss://rpc.shibuya.astar.network
+WS_PROVIDER_ENDPOINT_URI=ws://172.17.0.1:9948
 
 # # If your chain uses custom types you need to provide those
 # # as detailed here - https://polkadot.js.org/docs/api/start/types.extend
@@ -10,4 +10,4 @@ WS_PROVIDER_ENDPOINT_URI=wss://rpc.shibuya.astar.network
 # TYPES_ALIAS=typesAlias.json
 # SPEC_TYPES=typesSpec.json
 # CHAIN_TYPES=typesChain.json
-BUNDLE_TYPES=./shibuyaTypesBundle.json
+# BUNDLE_TYPES=./shibuyaTypesBundle.json
