--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -6,6 +6,6 @@ DB_PORT=23798
 #DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
-ARCHIVE_ENDPOINT=http://localhost:4010/v1/graphql
-WS_ENDPOINT=ws://127.0.0.1:9944
+ARCHIVE_ENDPOINT=https://suba.epirus.io/pom-archive/v1/graphql
+WS_ENDPOINT=wss://suba.epirus.io/pom
 BALANCES_STORE=system
