--- a/squid-ink/.env.shibuya
+++ b/squid-ink/.env.shibuya
@@ -6,7 +6,7 @@ DB_PORT=23798
 #DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
-ARCHIVE_ENDPOINT=http://localhost:4010/v1/graphql
-WS_ENDPOINT=wss://rpc.shibuya.astar.network
+ARCHIVE_ENDPOINT=https://shibuya.archive.subsquid.io/graphql
+WS_ENDPOINT=ws://127.0.0.1:9944
 BALANCES_STORE=system
 BUNDLE_TYPES=shibuyaTypesBundle.json
