--- a/squid-ink/archive/docker-compose.yml
+++ b/squid-ink/archive/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       POSTGRES_PASSWORD: postgres
 
   indexer:
-    image: subsquid/hydra-evm-indexer:5
+    image: subsquid/substrate-ingest
+    # image: subsquid/hydra-evm-indexer:5
     # image: subsquid/hydra-indexer:5
     restart: unless-stopped
     environment:
@@ -50,7 +51,8 @@ services:
     command: >
       sh -c "yarn db:bootstrap && yarn start:prod"
   indexer-gateway:
-    image: subsquid/hydra-evm-indexer-gateway:5
+    image: subsquid/substrate-gateway
+    # image: subsquid/hydra-evm-indexer-gateway:5
     # image: subsquid/hydra-indexer-gateway:5
     restart: unless-stopped
     depends_on:
