--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -14,22 +14,23 @@
     "lint:prod": "eslint . --ext .ts --ignore-path .gitignore --max-warnings 0"
   },
   "dependencies": {
-    "@subsquid/archive-registry": "^0.0.6",
-    "@subsquid/cli": "^0.4.1",
-    "@subsquid/graphql-server": "^0.3.0",
-    "@subsquid/scale-codec": "^0.4.2",
-    "@subsquid/ss58": "^0.1.0",
-    "@subsquid/substrate-processor": "^0.8.0",
-    "@subsquid/util-internal-hex": "^0.0.0",
+    "@subsquid/archive-registry": "^1.0.2",
+    "@subsquid/cli": "^0.5.1",
+    "@subsquid/graphql-server": "^1.1.0",
+    "@subsquid/logger": "^0.0.2",
+    "@subsquid/scale-codec": "^1.0.2",
+    "@subsquid/ss58": "^0.1.1",
+    "@subsquid/substrate-processor": "^1.2.0",
+    "@subsquid/typeorm-store": "^0.1.0",
+    "@subsquid/util-internal-hex": "^0.0.1",
     "dotenv": "^16.0.0",
     "module-alias": "^2.2.2",
     "pg": "^8.7.3",
-    "typeorm": "^0.2.41",
-    "winston": "^3.7.2"
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@subsquid/substrate-metadata-explorer": "^0.0.8",
-    "@subsquid/substrate-typegen": "^0.4.3",
+    "@subsquid/substrate-metadata-explorer": "^1.0.3",
+    "@subsquid/substrate-typegen": "^1.0.2",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.11.27",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
