--- a/squid-ink/.env.rococo
+++ b/squid-ink/.env.rococo
@@ -6,6 +6,6 @@ DB_PORT=23798
 #DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
-ARCHIVE_ENDPOINT=https://suba.epirus.io/archive/v1/graphql
+ARCHIVE_ENDPOINT=http://127.0.0.1:8888/graphql
 WS_ENDPOINT=wss://suba.epirus.io/node
 BALANCES_STORE=system
