--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,8 @@ jobs:
         [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
         # Use Docker `latest` tag convention
         [ "$VERSION" == "main" ] && VERSION=latest
+        # Append var to GITHUB_ENV
+        echo "VERSION=${VERSION}" >> $GITHUB_ENV
 
     - name: Build the Docker image
       run: | 
