--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,11 @@ jobs:
         [ "$VERSION" == "main" ] && VERSION=latest
         # Append var to GITHUB_ENV
         echo "VERSION=${VERSION}" >> $GITHUB_ENV
+        
+    - name: Generate Migrations
+      run: |
+        cd squid-ink
+        npx sqd db create-migration Init
 
     - name: Build the Docker image
       run: | 
