--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "debounce": "^1.2.1",
     "graphql": "^16.5.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/debounce": "^1.2.1",
     "@types/styled-components": "^5.1.25",
     "@types/tailwindcss": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
