encode extrinsic signer address

--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -9,3 +9,6 @@ GQL_PORT=4350
 ARCHIVE_ENDPOINT=https://suba.epirus.io/pom-archive/v1/graphql
 WS_ENDPOINT=wss://suba.epirus.io/pom
 BALANCES_STORE=system
+BATCH_SIZE=500
+#FROM_BLOCK=12345
+#TO_BLOCK=54321
