--- a/squid-ink/.env.rococo
+++ b/squid-ink/.env.rococo
@@ -9,3 +9,6 @@ GQL_PORT=4350
 ARCHIVE_ENDPOINT=http://127.0.0.1:8888/graphql
 WS_ENDPOINT=wss://suba.epirus.io/node
 BALANCES_STORE=system
+BATCH_SIZE=500
+#FROM_BLOCK=12345
+#TO_BLOCK=54321
