--- a/squid-ink/.env.shibuya
+++ b/squid-ink/.env.shibuya
@@ -10,3 +10,6 @@ ARCHIVE_ENDPOINT=https://shibuya.archive.subsquid.io/graphql
 WS_ENDPOINT=ws://127.0.0.1:9944
 BALANCES_STORE=system
 BUNDLE_TYPES=shibuyaTypesBundle.json
+BATCH_SIZE=500
+#FROM_BLOCK=12345
+#TO_BLOCK=54321
