--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -6,7 +6,7 @@ DB_PORT=23798
 #DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
-ARCHIVE_ENDPOINT=https://suba.epirus.io/pom-archive/v1/graphql
+ARCHIVE_ENDPOINT=https://suba.epirus.io/pom-archive/graphql
 WS_ENDPOINT=wss://suba.epirus.io/pom
 BALANCES_STORE=system
 BATCH_SIZE=500
