--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -59,6 +59,13 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "src/reportWebVitals.ts",
+      "src/types",
+      "src/mocks"
+    ]
+  },
   "devDependencies": {
     "@types/debounce": "^1.2.1",
     "@types/styled-components": "^5.1.25",
