rename folder src/mocks to src/_mocks

--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -62,8 +62,8 @@
   "jest": {
     "coveragePathIgnorePatterns": [
       "src/reportWebVitals.ts",
-      "src/types",
-      "src/mocks"
+      "src/_mocks",
+      "src/types"
     ]
   },
   "devDependencies": {
