ignore index.tsx in coverage

--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -61,6 +61,7 @@
   },
   "jest": {
     "coveragePathIgnorePatterns": [
+      "src/index.tsx",
       "src/reportWebVitals.ts",
       "src/_mocks",
       "src/types"
