--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -12,8 +12,8 @@
     "query-node:start": "squid-graphql-server",
     "lint": "npm run lint:prod -- --fix",
     "lint:prod": "eslint . --ext .ts --ignore-path .gitignore --max-warnings 0",
-    "test": "jest",
-    "test:coverage": "npm test -- --coverage"
+    "test": "jest --verbose --maxWorkers=1",
+    "test:coverage": "npm test -- --coverage --collectCoverageFrom='src/**/*.{ts,jxs}'"
   },
   "dependencies": {
     "@subsquid/archive-registry": "^1.0.2",
