--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -6,7 +6,7 @@
     "@craco/craco": "^7.0.0-alpha.7",
     "@datepicker-react/styled": "^2.8.4",
     "@headlessui/react": "^1.6.4",
-    "@heroicons/react": "^1.0.6",
+    "@heroicons/react": "^2.0.12",
     "@polkadot/react-identicon": "^2.4.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -20,6 +20,7 @@
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.2.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
