--- a/squid-ink/.env.shibuya
+++ b/squid-ink/.env.shibuya
@@ -4,12 +4,12 @@ DB_NAME=squid
 DB_PASS=squid
 DB_PORT=23798
 #DB_USER=root
-PROCESSOR_PROMETHEUS_PORT=3000
+PROCESSOR_PROMETHEUS_PORT=5000
 GQL_PORT=4350
 ARCHIVE_ENDPOINT=https://shibuya.archive.subsquid.io/graphql
-WS_ENDPOINT=ws://127.0.0.1:9944
+WS_ENDPOINT=wss://shibuya-rpc.dwellir.com
 BALANCES_STORE=system
 BUNDLE_TYPES=shibuyaTypesBundle.json
-BATCH_SIZE=100
-#FROM_BLOCK=12345
+BATCH_SIZE=200
+FROM_BLOCK=2515000
 #TO_BLOCK=54321
