--- a/explorer-ui/.env.development
+++ b/explorer-ui/.env.development
@@ -1,3 +1,3 @@
 PORT=3300
-REACT_APP_SQUID_ENDPOINT=http://localhost:4350/graphql
-# REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
+# REACT_APP_SQUID_ENDPOINT=http://localhost:4350/graphql
+REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
