add verifier api endpoints to .env

--- a/explorer-ui/.env.development
+++ b/explorer-ui/.env.development
@@ -1,3 +1,5 @@
 PORT=3300
-# REACT_APP_SQUID_ENDPOINT=http://localhost:4350/graphql
-REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
+REACT_APP_SQUID_ENDPOINT=http://localhost:4350/graphql
+REACT_APP_VERIFIER_ENDPOINT=https://ink-verifier.sirato.xyz/api
+REACT_APP_VERIFIER_WS_ENDPOINT=wss://ink-verifier.sirato.xyz/api
+# REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
