--- a/local-testnet/docker-compose.squid-archive.yml
+++ b/local-testnet/docker-compose.squid-archive.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   db:
     image: postgres:12
-    restart: always
+    restart: on-failure
     volumes:
       - .data/squid/archive/db:/var/lib/postgresql/data
     environment:
@@ -15,9 +15,9 @@ services:
     depends_on:
       - db
     restart: on-failure
-    image: subsquid/substrate-ingest:0
+    image: subsquid/substrate-ingest:firesquid
     command: [
-       "-e", "ws://bob:9944",
+       "-e", "ws://contracts:9944",
        "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
 
        # add another endpoint to increase archiving speed and reliability.
@@ -31,7 +31,8 @@ services:
   archive:
     depends_on:
       - db
-    image: subsquid/substrate-gateway:1.2.0
+    restart: on-failure
+    image: subsquid/substrate-gateway:firesquid
     environment:
       DATABASE_MAX_CONNECTIONS: 5
       RUST_LOG: "actix_web=info,actix_server=info"
