--- a/explorer-ui/.env.development
+++ b/explorer-ui/.env.development
@@ -2,6 +2,7 @@ PORT=3300
 # REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
 REACT_APP_SQUID_ENDPOINT=http://127.0.0.1:4000/graphql
 # REACT_APP_VERIFIER_ENDPOINT=https://ink-verifier.sirato.xyz/api
+REACT_APP_SOURCE_CODE_ENABLED=true
 REACT_APP_VERIFIER_ENDPOINT=http://127.0.0.1:3000
 REACT_APP_VERIFIER_WS_ENDPOINT=ws://127.0.0.1:3000
 # REACT_APP_VERIFIER_WS_ENDPOINT=wss://ink-verifier.sirato.xyz/api
