update verifier endpoints config

--- a/explorer-ui/.env.example
+++ b/explorer-ui/.env.example
@@ -1,2 +1,4 @@
 REACT_APP_SQUID_ENDPOINT=http://localhost:4350/graphql
 REACT_APP_SOURCE_CODE_ENABLED=false
+REACT_APP_VERIFIER_ENDPOINT=http://127.0.0.1:3001
+REACT_APP_VERIFIER_WS_ENDPOINT=ws://127.0.0.1:3001
