--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -56,8 +56,9 @@
   "scripts": {
     "start": "npm run env:update:dev && craco start",
     "build": "craco build",
+    "build:prod": "npm run env:update && npm run build",
     "analyze": "source-map-explorer 'build/static/js/*.js' --html .analysis/source-map.html",
-    "env:update": "runtime-env-cra --config-name=./public/runtime-env.js", 
+    "env:update": "NODE_ENV=production runtime-env-cra --config-name=./public/runtime-env.js", 
     "env:update:dev": "NODE_ENV=development runtime-env-cra --config-name=./public/runtime-env.js --env-file=./.env.development",
     "test": "craco test",
     "test:coverage": "CI=true npm test -- --env=jsdom --coverage",
