fix runtime env settings :)

--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -58,7 +58,7 @@
     "build": "craco build",
     "build:env": "npm run env:update && npm run build",
     "analyze": "source-map-explorer 'build/static/js/*.js' --html .analysis/source-map.html",
-    "env:update": "NODE_ENV=development runtime-env-cra --config-name=./public/runtime-env.js --env-file=./.env.development",
+    "env:update": "runtime-env-cra --config-name=./public/runtime-env.js --env-file=./.env.development",
     "test": "craco test",
     "test:coverage": "CI=true npm test -- --env=jsdom --coverage",
     "eject": "react-scripts eject",
