--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -2,14 +2,13 @@ CHAIN=local
 PROCESSOR_NAME=squid-local
 DB_NAME=squid
 DB_PASS=squid
-#DB_HOST=127.0.0.1
 DB_PORT=23798
 #DB_USER=root
-PROCESSOR_PROMETHEUS_PORT=3000
+PROCESSOR_PROMETHEUS_PORT=3211
 GQL_PORT=4350
-ARCHIVE_ENDPOINT=https://suba.epirus.io/pom-archive/graphql
-WS_ENDPOINT=wss://suba.epirus.io/pom
+ARCHIVE_ENDPOINT=http://127.0.0.1:8888/graphql
+WS_ENDPOINT=ws://127.0.0.1:9944
+## Defines in which storage are the balances stored. Can be found in the runtime config of the chain.
 BALANCES_STORE=system
-BATCH_SIZE=500
-#FROM_BLOCK=12345
-#TO_BLOCK=54321
+## If your chain uses custom types you need to provide those
+# BUNDLE_TYPES=typesBundle.json
