--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.0.0-alpha.7",
+    "@craco/craco": "^7.0.0",
     "@datepicker-react/styled": "^2.8.4",
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12",
-    "@polkadot/react-identicon": "^2.9.12",
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
+    "@polkadot/react-identicon": "^2.9.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.8",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "debounce": "^1.2.1",
     "graphql": "^16.6.0",
-    "highlight.js": "^11.6.0",
+    "highlight.js": "^11.7.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-responsive": "^9.0.0",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "runtime-env-cra": "^0.2.4",
     "twin.macro": "^2.8.2",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.3",
     "urql": "^2.2.3",
     "use-react-router-breadcrumbs": "^3.2.1",
     "web-vitals": "^2.1.4"
@@ -92,25 +92,32 @@
       "src/reportWebVitals.ts",
       "src/_mocks",
       "src/types"
-    ]
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@polkadot)"
+    ],
+    "moduleNameMapper": {
+      ".(css)$": "identity-obj-proxy"
+    }
   },
   "devDependencies": {
     "@types/debounce": "^1.2.1",
     "@types/styled-components": "^5.1.26",
     "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.26.0",
+    "eslint": "^8.28.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.10",
-    "postcss": "^8.4.18",
+    "eslint-plugin-react": "^7.31.11",
+    "identity-obj-proxy": "^3.0.0",
+    "postcss": "^8.4.19",
     "postcss-import": "^14.1.0",
     "postcss-nesting": "^10.2.0",
     "source-map-explorer": "^2.5.3",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.4"
   }
 }
