--- a/explorer-ui/.env.development
+++ b/explorer-ui/.env.development
@@ -1,6 +1,6 @@
 PORT=3300
-# REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
-REACT_APP_SQUID_ENDPOINT=http://127.0.0.1:4000/graphql
+REACT_APP_SQUID_ENDPOINT=https://suba.epirus.io/squid/graphql
+#REACT_APP_SQUID_ENDPOINT=http://127.0.0.1:4000/graphql
 # REACT_APP_VERIFIER_ENDPOINT=https://ink-verifier.sirato.xyz/api
 REACT_APP_SOURCE_CODE_ENABLED=true
 REACT_APP_VERIFIER_ENDPOINT=http://127.0.0.1:3001
