update dependencies for json5

--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -36,7 +36,8 @@
     },
     "yargs": {
       "yargs-parser": ">=5.0.1"
-    }
+    },
+    "json5": "^2.2.2"
   },
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "^1.0.8",
