--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -51,7 +51,8 @@
     },
     "yargs": {
       "yargs-parser": ">=5.0.1"
-    }
+    },
+    "json5": "^2.2.2"
   },
   "scripts": {
     "start": "npm run env:update:dev && craco start",
@@ -104,17 +105,17 @@
     "@types/debounce": "^1.2.1",
     "@types/styled-components": "^5.1.26",
     "@types/tailwindcss": "^3.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.28.0",
+    "eslint": "^8.31.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-n": "^15.6.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
     "identity-obj-proxy": "^3.0.0",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.21",
     "postcss-import": "^14.1.0",
     "postcss-nesting": "^10.2.0",
     "source-map-explorer": "^2.5.3",
