--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -27,6 +27,7 @@
     "@subsquid/util-internal-hex": "^0.0.1",
     "dotenv": "^16.0.3",
     "module-alias": "^2.2.2",
+    "node-fetch": "^2.6.7",
     "pg": "^8.8.0",
     "typeorm": "^0.3.10"
   },
@@ -44,6 +45,7 @@
     "@types/jest": "^28.1.8",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.18.3",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
