--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -28,6 +28,7 @@
     "@subsquid/typeorm-store": "^0.1.5",
     "@subsquid/util-internal-hex": "^0.0.1",
     "dotenv": "^16.0.3",
+    "lru-cache": "^7.14.1",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.7",
     "pg": "^8.8.0",
