--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -20,7 +20,7 @@
     "@subsquid/archive-registry": "^1.0.16",
     "@subsquid/cli": "^0.5.1",
     "@subsquid/graphql-server": "^3.2.3",
-    "@subsquid/ink-abi": "../ink-abi",
+    "@subsquid/ink-typegen": "^0.1.0",
     "@subsquid/logger": "^0.2.0",
     "@subsquid/scale-codec": "^1.0.5",
     "@subsquid/ss58": "^0.1.2",
