--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-type-graphql": "^0.3.2",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.8",
+    "typedoc": "^0.23.24",
     "typescript": "~4.6.2"
   }
 }
