--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -7,6 +7,7 @@
     "@datepicker-react/styled": "^2.8.4",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@polkadot/keyring": "^10.3.1",
     "@polkadot/react-identicon": "^2.9.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
