add toggle for decoding

--- a/squid-ink/.env.local
+++ b/squid-ink/.env.local
@@ -10,5 +10,7 @@ ARCHIVE_ENDPOINT=http://127.0.0.1:8888/graphql
 WS_ENDPOINT=ws://127.0.0.1:9944
 ## Defines in which storage are the balances stored. Can be found in the runtime config of the chain.
 BALANCES_STORE=system
-## If your chain uses custom types you need to provide those
-# BUNDLE_TYPES=typesBundle.json
+## Toggle for contract message and event decoding
+## Requires connection to verifier server through VERIFIER_ENDPOINT
+SOURCE_CODE_ENABLED=true
+VERIFIER_ENDPOINT=http://127.0.0.1:3001
