--- a/squid-ink/.env.rococo
+++ b/squid-ink/.env.rococo
@@ -2,14 +2,14 @@ CHAIN=rococo
 PROCESSOR_NAME=squid-rococo
 DB_NAME=squid
 DB_PASS=squid
-#DB_HOST=192.168.0.143
 DB_PORT=23798
-#DB_USER=root
 PROCESSOR_PROMETHEUS_PORT=3000
 GQL_PORT=4350
 ARCHIVE_ENDPOINT=https://suba.epirus.io/archive/graphql
 WS_ENDPOINT=wss://suba.epirus.io/node
 BALANCES_STORE=system
 BATCH_SIZE=200
-#FROM_BLOCK=12345
-#TO_BLOCK=54321
+## Toggle for contract message and event decoding
+## Requires connection to verifier server through VERIFIER_ENDPOINT
+SOURCE_CODE_ENABLED=true
+VERIFIER_ENDPOINT=http://127.0.0.1:3001
