--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -42,7 +42,8 @@
     "yargs": {
       "yargs-parser": ">=5.0.1"
     },
-    "json5": "^2.2.2"
+    "json5": "^2.2.2",
+    "http-cache-semantics": ">=4.1.1"
   },
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "^1.0.8",
