add tests in UI

--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -93,7 +93,8 @@
       "src/index.tsx",
       "src/reportWebVitals.ts",
       "src/_mocks",
-      "src/types"
+      "src/types",
+      "src/apis/verifierApi.ts"
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!@polkadot)"
