add shibuya squid typegen

--- a/squid-ink/.env.shibuya
+++ b/squid-ink/.env.shibuya
@@ -11,5 +11,5 @@ WS_ENDPOINT=wss://shibuya-rpc.dwellir.com
 BALANCES_STORE=system
 BUNDLE_TYPES=shibuyaTypesBundle.json
 BATCH_SIZE=200
-FROM_BLOCK=2515000
+#FROM_BLOCK=2515000
 #TO_BLOCK=54321
