--- a/local-testnet/docker-compose.squid-archive.yml
+++ b/local-testnet/docker-compose.squid-archive.yml
@@ -17,14 +17,15 @@ services:
     restart: on-failure
     image: subsquid/substrate-ingest:firesquid
     command: [
-       "-e", "ws://contracts:9944",
-       "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
+      # "-e", "ws://contracts:9944",
+      "-e", "wss://rococo-contracts-rpc.polkadot.io",
+      "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
 
-       # add another endpoint to increase archiving speed and reliability.
-       # "-e", "wss://shibuya.public.blastapi.io",
-       #  "--start-block", "1000000", # uncomment to specify a non-zero start block
-       "--out", "postgres://postgres:postgres@db:5432/squid-archive"
-    ]
+      # add another endpoint to increase archiving speed and reliability.
+      # "-e", "wss://shibuya.public.blastapi.io",
+      #  "--start-block", "1000000", # uncomment to specify a non-zero start block
+      "--out", "postgres://postgres:postgres@db:5432/squid-archive"
+      ]
     ports:
       - "9090:9090" # prometheus port
 
