--- a/local-testnet/docker-compose.squid-ink.yml
+++ b/local-testnet/docker-compose.squid-ink.yml
@@ -10,7 +10,7 @@ x-environment: &envs
   PROCESSOR_PROMETHEUS_PORT: 3000
   GQL_PORT: 4000
   ARCHIVE_ENDPOINT: http://archive:8000/graphql
-  WS_ENDPOINT: ws://contracts:9944
+  WS_ENDPOINT: wss://rococo-contracts-rpc.polkadot.io  
   BALANCES_STORE: system
   SOURCE_CODE_ENABLED: "true"
   VERIFIER_ENDPOINT: http://host.docker.internal:3001
