--- a/squid-ink/archive/docker-compose.yml
+++ b/squid-ink/archive/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - db
     restart: on-failure
-    image: subsquid/substrate-ingest:firesquid
+    image: subsquid/substrate-ingest:1.5.2
     command: [
        # "-e", "ws://172.17.0.1:9944",
        "-e", "wss://suba.epirus.io/node",
@@ -31,7 +31,7 @@ services:
   gateway:
     depends_on:
       - db
-    image: subsquid/substrate-gateway:firesquid
+    image: subsquid/substrate-gateway:2.6.4
     environment:
       DATABASE_MAX_CONNECTIONS: 5
       RUST_LOG: "actix_web=info,actix_server=info"
