--- a/local-testnet/docker-compose.squid-archive.yml
+++ b/local-testnet/docker-compose.squid-archive.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:12  # CockroachDB cluster might be a better fit for production deployment
+    image: postgres:15  # CockroachDB cluster might be a better fit for production deployment
     restart: always
     volumes:
       - /var/lib/postgresql/data
@@ -19,15 +19,17 @@ services:
     image: subsquid/substrate-ingest:1.5.2
     command: [
       # polkadot endpoints -- replace with your wss
-      "-e", "wss://polkadot-rpc.polkadot.io",
-      "-c", "10", # allow up to 20 pending requests for the above endpoint (default is 5)
+      "-e", "ws://contracts:9944",
+      "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
+
       # for a local setup use 'host.docker.internal' as a host (instead of localhost or 127.0.0.1
       # e.g. "-e", "ws://host.docker.internal:9944",
       # add another endpoint to increase archiving speed and reliability.
-      "-e", "wss://polkadot-rpc.dwellir.com",
-      "-e", "wss://polkadot.api.onfinality.io/public-ws",
-      "-c", "10",
-      "-e", "wss://polkadot.public.curie.radiumblock.io/ws",
+      #"-e", "wss://polkadot-rpc.dwellir.com",
+      #"-e", "wss://polkadot.api.onfinality.io/public-ws",
+      #"-c", "10",
+      #"-e", "wss://polkadot.public.curie.radiumblock.io/ws",
+
       #  "--start-block", "1000000", # uncomment to specify a non-zero start block
       "--prom-port", "9090",
       "--out", "postgres://postgres:postgres@db:5432/squid-archive"
@@ -56,7 +58,7 @@ services:
   # It provides rich GraphQL API for querying archived data.
   # Many developers find it very useful for exploration and debugging.
   explorer:
-    image: subsquid/substrate-explorer:firesquid
+    image: subsquid/substrate-explorer:2.0.5
     environment:
       DB_TYPE: postgres # set to `cockroach` for Cockroach DB
       DB_HOST: db
