--- a/local-testnet/docker-compose.squid-archive.yml
+++ b/local-testnet/docker-compose.squid-archive.yml
@@ -1,9 +1,7 @@
-version: "3.5"
-
 services:
   db:
-    image: postgres:15
-    restart: on-failure
+    image: postgres:15  # CockroachDB cluster might be a better fit for production deployment
+    restart: always
     volumes:
       - /var/lib/postgresql/data
     environment:
@@ -11,39 +9,62 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: squid-archive
 
+
+  #  Substrate-ingest fetches blocks from a substrate chain and dumps them into a Postgres-compatible
+  #  database or as JSON lines. It has the following arguments
   ingest:
     depends_on:
       - db
     restart: on-failure
-    image: subsquid/substrate-ingest:firesquid
+    image: subsquid/substrate-ingest:1.5.2
     command: [
-       "-e", "ws://contracts:9944",
-       "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
+      # polkadot endpoints -- replace with your wss
+      "-e", "ws://contracts:9944",
+      "-c", "20", # allow up to 20 pending requests for the above endpoint (default is 5)
 
-       # add another endpoint to increase archiving speed and reliability.
-       # "-e", "wss://shibuya.public.blastapi.io",
-       #  "--start-block", "1000000", # uncomment to specify a non-zero start block
-       "--out", "postgres://postgres:postgres@db:5432/squid-archive"
+      # for a local setup use 'host.docker.internal' as a host (instead of localhost or 127.0.0.1
+      # e.g. "-e", "ws://host.docker.internal:9944",
+      # add another endpoint to increase archiving speed and reliability.
+      #"-e", "wss://polkadot-rpc.dwellir.com",
+      #"-e", "wss://polkadot.api.onfinality.io/public-ws",
+      #"-c", "10",
+      #"-e", "wss://polkadot.public.curie.radiumblock.io/ws",
+
+      #  "--start-block", "1000000", # uncomment to specify a non-zero start block
+      "--prom-port", "9090",
+      "--out", "postgres://postgres:postgres@db:5432/squid-archive"
     ]
     ports:
       - "9090:9090" # prometheus port
 
-  archive:
+  # substrate-gateway exposes on-chain data with a GraphQL interface designed for batch requests
+  # and metadata exploration by Squid processors.
+  gateway:
     depends_on:
       - db
-    restart: on-failure
-    image: subsquid/substrate-gateway:firesquid
+    image: subsquid/substrate-gateway:2.6.4
     environment:
-      DATABASE_MAX_CONNECTIONS: 5
-      RUST_LOG: "actix_web=info,actix_server=info"
+      RUST_LOG: "substrate_gateway=info,actix_server=info"
     command: [
-       "--database-url", "postgres://postgres:postgres@db:5432/squid-archive",
-       # "--evm-support" # uncomment for chains with Frontier EVM pallet
-                         # (e.g. Moonbeam/Moonriver or Astar/Shiden)
+      "--database-url", "postgres://postgres:postgres@db:5432/squid-archive",
+      "--database-max-connections", "3", # max number of concurrent database connections
+      # "--evm-support" # uncomment for chains with Frontier EVM pallet
+      # (e.g. Moonbeam/Moonriver or Astar/Shiden)
     ]
     ports:
       - "8888:8000"
 
-networks:
-  default:
-    name: local-testnet
+  # Explorer service is optional.
+  # It provides rich GraphQL API for querying archived data.
+  # Many developers find it very useful for exploration and debugging.
+  explorer:
+    image: subsquid/substrate-explorer:2.0.5
+    environment:
+      DB_TYPE: postgres # set to `cockroach` for Cockroach DB
+      DB_HOST: db
+      DB_PORT: "5432"
+      DB_NAME: "squid-archive"
+      DB_USER: "postgres"
+      DB_PASS: "postgres"
+    ports:
+      - "4444:3000"
