--- a/squid-ink/package.json
+++ b/squid-ink/package.json
@@ -18,17 +18,15 @@
   },
   "dependencies": {
     "@polkadot/api-contract": "^9.11.3",
-
-    "@subsquid/archive-registry": "^1.0.16",
-    "@subsquid/cli": "^0.5.1",
-    "@subsquid/graphql-server": "^3.2.3",
-    "@subsquid/ink-typegen": "^0.1.0",
-    "@subsquid/logger": "^0.2.0",
-    "@subsquid/scale-codec": "^1.0.5",
+    "@subsquid/archive-registry": "^2.1.10",
+    "@subsquid/cli": "^2.2.1",
+    "@subsquid/graphql-server": "^3.3.2",
+    "@subsquid/ink-typegen": "^0.2.1",
+    "@subsquid/logger": "^0.3.1",
+    "@subsquid/scale-codec": "^1.1.1",
     "@subsquid/ss58": "^0.1.4",
-    "@subsquid/substrate-processor": "2.4.1",
-    "@subsquid/typeorm-store": "0.2.2",
-
+    "@subsquid/substrate-processor": "^2.4.1",
+    "@subsquid/typeorm-store": "^0.2.2",
     "@subsquid/util-internal-hex": "^0.0.1",
     "dotenv": "^16.0.3",
     "lru-cache": "^7.14.1",
@@ -50,6 +48,7 @@
   "devDependencies": {
     "@subsquid/substrate-metadata-explorer": "1.1.2",
     "@subsquid/substrate-typegen": "2.2.1",
+    "@types/blake2b": "^2.1.0",
     "@types/jest": "^28.1.8",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.18.3",
