--- a/squid-ink/docker-compose.yml
+++ b/squid-ink/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   db:
-    container_name: subsquid_db
+    container_name: subsquid_processor_db
     image: postgres:15
     environment:
-      POSTGRES_DB: squid
-      POSTGRES_PASSWORD: squid
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "${DB_PORT}:5432"
       # command: ["postgres", "-c", "log_statement=all"]
