256 fix Docker workflow

--- a/squid-ink/Dockerfile
+++ b/squid-ink/Dockerfile
@@ -1,16 +1,19 @@
 FROM node:16-alpine AS node
 
-FROM node AS node-with-gyp
+FROM node:16-alpine AS node-with-gyp
 RUN apk add g++ make python3
+#RUN npm i -g @subsquid/cli@latest
 
 FROM node-with-gyp AS builder
 WORKDIR /squid
+ADD commands.json .
 ADD package.json .
 ADD package-lock.json .
 RUN npm ci
 ADD tsconfig.json .
 ADD src src
-RUN npm run build
+RUN npx sqd codegen
+RUN npx sqd build
 
 FROM node-with-gyp AS deps
 WORKDIR /squid
@@ -23,9 +26,12 @@ WORKDIR /squid
 COPY --from=deps /squid/package.json .
 COPY --from=deps /squid/package-lock.json .
 COPY --from=deps /squid/node_modules node_modules
+COPY --from=builder /squid/src/model src/model
 COPY --from=builder /squid/lib lib
 ADD db db
 ADD schema.graphql .
+ADD tsconfig.json .
+ADD commands.json .
 # TODO: use shorter PROMETHEUS_PORT
 ENV PROCESSOR_PROMETHEUS_PORT 3000
 EXPOSE 3000
@@ -33,8 +39,10 @@ EXPOSE 4000
 
 
 FROM squid AS processor
-CMD ["npm", "run", "processor:start"]
+#CMD ["npm", "run", "processor:start"]
+CMD ["npx", "sqd", "process"]
 
 
 FROM squid AS query-node
-CMD ["npm", "run", "query-node:start"]
+#CMD ["npm", "run", "query-node:start"]
+CMD ["npx", "sqd", "serve"]
