--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -26,6 +26,7 @@
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "runtime-env-cra": "^0.2.4",
     "twin.macro": "^2.8.2",
     "typescript": "^4.9.3",
@@ -105,6 +106,7 @@
   "devDependencies": {
     "@craco/craco": "^7.0.0",
     "@types/debounce": "^1.2.1",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@types/styled-components": "^5.1.26",
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
