--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -23,10 +23,10 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
+    "react-json-view": "latest",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "react-syntax-highlighter": "^15.5.0",
     "runtime-env-cra": "^0.2.4",
     "twin.macro": "^2.8.2",
     "typescript": "^4.9.3",
@@ -104,7 +104,8 @@
     }
   },
   "devDependencies": {
-    "@craco/craco": "^7.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
+    "@craco/craco": "^7.1.0",
     "@types/debounce": "^1.2.1",
     "@types/react-syntax-highlighter": "^15.5.6",
     "@types/styled-components": "^5.1.26",
