--- a/explorer-ui/package.json
+++ b/explorer-ui/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.0.0",
     "@datepicker-react/styled": "^2.8.4",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
@@ -24,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
+    "react-json-view": "latest",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -104,7 +104,10 @@
     }
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.0-placeholder-for-preset-env.2",
+    "@craco/craco": "^7.1.0",
     "@types/debounce": "^1.2.1",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@types/styled-components": "^5.1.26",
     "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
