set config in .env.example

--- a/explorer-ui/.env.example
+++ b/explorer-ui/.env.example
@@ -1,4 +1,5 @@
-REACT_APP_SQUID_ENDPOINT=http://localhost:4350/graphql
-REACT_APP_SOURCE_CODE_ENABLED=false
-REACT_APP_VERIFIER_ENDPOINT=http://127.0.0.1:3001
-REACT_APP_VERIFIER_WS_ENDPOINT=ws://127.0.0.1:3001
+REACT_APP_SQUID_ENDPOINT=https://substrate.sirato.xyz/squid/graphql
+REACT_APP_SQUID_ARCHIVE_ENDPOINT=https://substrate.sirato.xyz:4445/graphql
+REACT_APP_SOURCE_CODE_ENABLED=true
+REACT_APP_VERIFIER_ENDPOINT=https://ink-verifier.sirato.xyz/api
+REACT_APP_VERIFIER_WS_ENDPOINT=wss://ink-verifier.sirato.xyz/api
